re PR c++/33558 ('mutable' incorrectly accepted on reference members)

2011-01-15  Giovanni Funchal  <gafunchal@gmail.com>
	    Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR c++/33558
	* decl.c (grokdeclarator): Reject mutable reference members.


Co-Authored-By: Jonathan Wakely <jwakely.gcc@gmail.com>

From-SVN: r168843