gcc/testsuite/g++.dg/other/pr33558-2.C
@@ -1,0 +1,6 @@
+/* { dg-do compile } */
+/* { dg-options "-fpermissive" } */
+
+class X {
+  mutable int &q; /* { dg-warning "cannot be declared 'mutable'" } */
+};
